--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>vaibhav sharma</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css folder\styles.css">
     <link rel="icon" href="Favorite Star Icon Stock Vector (Royalty Free) 387841594_files\12.jpg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
