--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>vaibhav sharma</title>
-    <link rel="stylesheet" href="css folder\styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="Favorite Star Icon Stock Vector (Royalty Free) 387841594_files\12.jpg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,13 +14,13 @@
 
 <body>
     <div class="top-container">
-        <img class="top-cloud" src="CSS - My Site Images\cloud.png" alt="cloud img">
+        <img class="top-cloud" src="cloud.png" alt="cloud img">
         <h1>
             I'm vaibhav sharma
         </h1>
         <h2>a programmer</h2>
-        <img class="bottom-cloud" src="CSS - My Site Images\cloud.png" alt="cloud image">
-        <img src="CSS - My Site Images\mountain.png" alt="mountain image">
+        <img class="bottom-cloud" src="cloud.png" alt="cloud image">
+        <img src="mountain.png" alt="mountain image">
     </div>
     
 <div class="middle-container">
@@ -33,12 +33,12 @@
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class ="web-development" src="CSS - My Site Images\web development.jpeg" alt="web development">
+        <img class ="web-development" src="web development.jpeg" alt="web development">
         <h3>web develpoment</h3>
         <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
       </div>
       <div class="skill-row">
-        <img class="coding" src="CSS - My Site Images\coding.jpeg" alt="coding">
+        <img class="coding" src="coding.jpeg" alt="coding">
         <h3>coding</h3>
         <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
       </div>
